Updated Portfolio link

--- a/Blog/templates/Blog/about.html
+++ b/Blog/templates/Blog/about.html
@@ -30,7 +30,7 @@
       </p>
       <p>
         Check out my Personal Website at
-        <a href="https://itspiyushsati.netlify.app/">www.itspiyushsati.vercel.app</a>.
+        <a href="https://itspiyushsati.vercel.app/">www.itspiyushsati.vercel.app</a>.
       </p>
     </div>
   </div>
