Updated social links and about data

--- a/Blog/templates/Blog/layout.html
+++ b/Blog/templates/Blog/layout.html
@@ -149,7 +149,7 @@
                 <div class="col-lg-8 col-md-10 mx-auto">
                     <ul class="list-inline text-center">
                         <li class="list-inline-item">
-                            <a href="https://twitter.com/piyush.sati.12">
+                            <a href="https://itspiyushsati.vercel.app">
                                 <span class="fa-stack fa-lg">
                                     <i class="fas fa-circle fa-stack-2x"></i>
                                     <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
@@ -157,7 +157,7 @@
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="https://www.facebook.com/piyush.sati.12">
+                            <a href="https://www.facebook.com/piyush.sati.12/">
                                 <span class="fa-stack fa-lg">
                                     <i class="fas fa-circle fa-stack-2x"></i>
                                     <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
@@ -165,7 +165,7 @@
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="https://www.linkedin.com/in/piyush-sati-27605017a/">
+                            <a href="https://www.linkedin.com/in/piyush-sati">
                                 <span class="fa-stack fa-lg">
                                     <i class="fas fa-circle fa-stack-2x"></i>
                                     <i class="fab fa-linkedin-in fa-stack-1x fa-inverse"></i>
