--- a/Blog/templates/Blog/about.html
+++ b/Blog/templates/Blog/about.html
@@ -20,9 +20,8 @@
   <div class="row">
     <div class="col-lg-8 col-md-10 mx-auto">
       <p>
-        Hi my name is Piyush Sati.I am Tech Enthusiast,Problem solver and love
-        to work on creating and building realworld based projects and solving
-        problems in my free time.
+        Hi my name is Piyush Sati. I am a self-taught developer who enjoys
+        creating things that live on the internet.
       </p>
       <p>
         If have a project that that you want to get started or think you need my
